<resources>
    <string name="app_name">Beer Tag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Projet P4</string>
    <string name="nav_header_subtitle">Group 12</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tapAgain">Tap once again to quit !</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="copied">Result has been successfully copied</string>
    <string name="result">Result</string>
    <string name="subsplash_text">Beer Tag, your 2.0 loyalty card</string>
    <string name="splash_text">Beer Tag</string>
    <string name="menu_scan">Scanner</string>
    <!--<string name="menu_generate">Generate</string>-->
    <string name="valid_email">Valid email</string>
    <string name="invalid_email">Invalid email !</string>
    <string name="existing_email">This email address is already used</string>
    <string name="account_done">Account successfully created</string>
    <string name="password_no_match">Passwords don\'t match</string>
    <string name="default_username">Default Username</string>
    <string name="generate_fragment_spinner_default">Please select the ID of your shop</string>
    <string name="disabled_for_facebook">Disabled for Facebook accounts</string>

    <!--FRAGMENT 1-->
    <string name="sign_in">SIGN IN</string>
    <string name="lost_password">Lost your password ?</string>
    <string name="fragment1_suggest_account">No account yet ?</string>

    <!--FRAGMENT 2-->
    <string name="sign_up">SIGN UP</string>
    <string name="your_username">Your username (e-mail)</string>
    <string name="your_password">Your password</string>
    <string name="your_password_confirm">Your password (confirm)</string>
    <string name="first_name">Your first name</string>
    <string name="last_name">Your last name</string>
    <string name="birth_date">Your birth date</string>
    <string name="birth_date_default">(DD/MM/YYYY)</string>
    <string name="fragment2_confirm">CREATE ACCOUNT AND SIGN IN</string>
    <string name="fragment2_suggest_partner">Create a Partner account ?</string>
    <string name="swipe_right">Swipe from the right</string>

    <!--FRAGMENT 3-->
    <string name="become_partner">BECOME PARTNER</string>
    <string name="your_name">This is the name to be displayed to users in the app</string>
    <string name="your_name_default">Public name</string>
    <string name="your_address">This is the address of your headquarters.\nIt will not be displayed to users</string>
    <string name="your_address_default">Your address</string>
    <string name="your_tva_number">Enter your company\'s TVA number</string>
    <string name="your_tva_number_default" translatable="false">BE0123456789</string>
    <string name="fragment3_spinner_title">Select in the drop-down list an existing User that will be administrator for this Partner. You can add more after account creation</string>
    <string name="fragment3_conclusion">More personalization, such as adding your logo, will be available after account creation</string>

    <string name="login_fields">Please complete all fields</string>
    <string name="email_field">Please complete email field</string>
    <string name="login_success">Login success</string>
    <string name="login_check_credentials">Check credentials</string>

    <string name="hello">Hello :)</string>
    <string name="you_have_both_types">You have both an User and Partner account.</string>
    <string name="please_select_one">Please select the desired interface</string>
    <string name="connect_as_user">Connect as User</string>
    <string name="connect_as_admin">Connect as Admin</string>

    <!--Navigation view-->
    <string name="nav_scan_code">Scan a code</string>
    <string name="nav_generate_code">Generate a code</string>
    <string name="nav_browse_points">Look up my points</string>
    <string name="nav_title_management">Account management</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_title_priv_account">Your partner account</string>
    <string name="nav_title_admin_default">Admin of Partner &quot;default partner&quot;</string>
    <string name="nav_add_admin">Add an Administrator</string>
    <string name="nav_admin_settings">Settings</string>
    <string name="nav_admin_browse_clients">Look up my clients\' points</string>
    <string name="nav_find_partner">Find partners near me</string>
    <string name="nav_switch_menu">Switch the User Interface</string>

    <!--Browse points-->
    <string name="browse_points_title">Browse my points</string>
    <string name="default_partner_name">Default Partner Name</string>
    <string name="browse_points_default_shop_address">Default Shop Address</string>
    <string name="activate_promotion">Activate this promotion</string>
    <string name="points_required">Points required</string>
    <string name="valid_until">Valid until :</string>
    <string name="default_descr">Default description</string>
    <string name="default_reusability">Default reusability</string>
    <string name="default_date">Default date</string>
    <string name="promo_is_reusable">This promotion is reusable</string>
    <string name="promo_is_not_reusable">This promotion is NOT reusable</string>
    <string name="use_promotions_title">Use promotions</string>
    <string name="use_promotions_points_collected">Points collected :</string>
    <string name="use_promo">Use this promotion</string>

    <!--Browse clients-->
    <string name="browse_clients_title">Browse my clients\' points</string>
    <string name="browse_clients_default_user_fullname">Default User Full Name</string>
    <string name="browse_clients_default_user_username">Default User email</string>
    <string name="browse_clients_shop_title">Shop located at :</string>
    <string name="default_shop_name">Default Shop name</string>

    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_partner_spinner_default">Please select an User</string>
    <string name="select_file">Select a file</string>
    <string name="manage_admins">Manage your administrators :</string>
    <string name="change_logo">Change your logo :</string>
    <string name="settings_change_partner_name">Change the Partner\'s name :</string>
    <string name="settings_change_user_name">Change your name :</string>
    <string name="settings_change_password">Change your password :</string>
    <string name="settings_change_address">Change the Partner\'s address :</string>
    <string name="default_address">Default Address</string>
    <string name="default_current_password">Your current password</string>
    <string name="default_new_password">Your new password</string>
    <string name="settings_change_birthday">Change your birthdate (seriously ?) :</string>
    <string name="settings_change_picture">Change your profile picture :</string>

    <string name="type_here_bar">Generate barcode</string>
    <string name="type_here_qr">Generate QR code</string>

    <string name="space" translatable="false"> </string>
    <string name="hashtag" translatable="false">#</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="default_value" translatable="false">default</string>

    <string name="facebook_app_id" translatable="false">586274028466486</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb586274028466486</string>


    <string name="alcool_notification_title">Watch out for you alcohol consumption !</string>
    <string name="alcool_notification_text">Watch out for your alcohol consumption. Drink responsibly !</string>
    <string name="title_activity_find_partner">FindPartnerActivity</string>

    <string name="sign_up_verification_text" translatable="false">fdzdzdzdzd</string>
    <string name="dialog_share_text">Great, your purchase has been registered ! Would you like to share it with your friends, using a personalized picture ? :D</string>
    <string name="intent_share_text">Share with&#8230;</string>
    <string name="qr_validity_time_text">The generated QR code will be valid for 3 minutes</string>
    <string name="alcool_sensi_text">We noticed you just scanned mutliple times in a row. We remind you to be careful about your consumption. Beer Tag is just a tool designed to make your life easier; we ask you to be remain responsible in all circumstances</string>
    <string name="qr_amount_text">Please enter your purchase\'s cost</string>
    <string name="qr_expired_text">The scanned QR code is invalid or has expired&#8230;</string>
    <string name="qr_scan_text">Please scan a QR code</string>
    <string name="your_picture">Your picture</string>
    <string name="share">Share</string>
    <string name="share_my_picture">Great picture ! You can now share it by pressing this button ! =D Do not hesitate to do so, as it will surely grant you a lot of likes and make you a very rich influencer.</string>
    <string name="i_read">I read</string>
    <string name="notification">Notification</string>
    <string name="drink_responsibly">Drink responsibly</string>
    <string name="see_left_menu">It all starts in the left menu</string>
    <string name="whats_beer_tag">BeerTag, the 2.0 fidelity system that makes your life easier ! Have fun !</string>
    <string name="group_12">Group 12</string>
    <string name="whoops">Whoops !</string>
    <string name="home">Home</string>
    <string name="default_user_fullname">Default User Full Name</string>
    <string name="default_user_firstname">Default User First Name</string>
    <string name="default_user_lastname">Default User Last Name</string>
    <string name="button">Button</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="verify">VERIFY</string>
    <string name="delete">Delete</string>
    <string name="version">Version %1$s</string>
    <string name="take_picture">Take a picture</string>
    <string name="location">Location</string>
    <string name="disabled">Disabled</string>
</resources>
