<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/qr_code"
            android:title="@string/nav_scan_code" />
        <item
            android:id="@+id/nav_browse_points"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_browse_points" />
        <item
            android:id="@+id/nav_find_partner"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_find_partner" />
        <item
            android:title="@string/instagram"
            android:id="@+id/go_to_instagram"
            android:icon="@drawable/ic_instagram_menu" />
    </group>

    <item
        android:title="@string/nav_title_management" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_settings" />

            <item
                android:title="@string/nav_switch_menu"
                android:id="@+id/change_interface_user"
                android:icon="@drawable/common_full_open_on_phone" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_logout" />

        </menu>
    </item>



</menu>
