<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="Your private account" >
        <menu>
            <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_scan_code" />
            <item
                android:id="@+id/nav_generate"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_generate_code" />
            <item
                android:id="@+id/nav_browse_points"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_browse_points" />
            <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
        </menu>
    </item>

    <item
        android:title="@string/nav_management" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_logout" />
        </menu>
    </item>

    <item
        android:title="Admin account of Partner &quot;default partner&quot;" >
        <menu>
            <item
                android:id="@+id/nav_admin_add_admin"
                android:icon="@drawable/ic_menu_camera"
                android:title="Add an Administrator" />
            <item
                android:id="@+id/nav_admin_settings"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Settings" />
        </menu>
    </item>



</menu>
