<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:backgroundTint="@color/admin_colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/activity_main_admin_navigation_header_image"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/logo_header" />

    <TextView
        android:id="@+id/activity_main_admin_navigation_header_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/nav_header_title" />
    <!--android:paddingTop="@dimen/nav_header_vertical_spacing"-->

    <TextView
        android:id="@+id/activity_main_admin_navigation_header_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:id="@+id/activity_main_admin_navigation_header_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
