<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkwhite">

    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/register" >
    </View>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/ic_launcher" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginBottom="@dimen/spacing_xlarge"
                        android:text="@string/sign_up"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />


                    <!--Adresse email -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_username"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/colorPrimary" />
                    <EditText
                        android:id="@+id/sign_up_user_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:textSize="12sp"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:hint="@string/your_username"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />
                    <!---->

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <!-- Password -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_password"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/colorPrimary" />
                    <EditText
                        android:id="@+id/sign_up_user_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:textSize="12sp"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:hint="@string/your_password"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_password_confirm"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/colorPrimary" />
                    <EditText
                        android:id="@+id/sign_up_user_input_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:textSize="12sp"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:hint="@string/your_password"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />
                    <!---->

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <!-- Prenom-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/colorPrimary" />
                    <EditText
                        android:id="@+id/sign_up_user_input_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:textSize="12sp"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:inputType="textPersonName"
                        android:hint="@string/first_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <!-- Nom -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/colorPrimary" />
                    <EditText
                        android:id="@+id/sign_up_user_input_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:textSize="12sp"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <!--Date de naissance-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/colorPrimary" />
                    <EditText
                        android:id="@+id/sign_up_user_input_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:hint="@string/birth_date_default"
                        android:textSize="12sp"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:inputType="date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <!--Créer compte-->
                    <Button
                        android:id="@+id/sign_up_user_button_out"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/fragment2_confirm"
                        android:textAllCaps="false"
                        android:textColor="@color/darkwhite"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment2_suggest_partner"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="#000000" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/swipe_right"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="#000000"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                </LinearLayout>
            </ScrollView>


        </android.support.v7.widget.CardView>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

    </LinearLayout>

</RelativeLayout>
